# agent-rag

./: .env.example  .gitignore  README.md  app.py  models.py  pyproject.toml
src/: config.py  models.py
src/citations/: formatter.py  links.py
src/ingestion/: chunker.py  loaders.py
src/rag/: answer_generator.py  embedding_core.py  fake_llm.py  llm_core.py  pipeline.py  retriever.py  runtime.py
src/storage/: db.py  files.py
src/ui/: chat.py  citations.py  document_viewer.py  upload.py  viewer.py
src/vectorstore/: chroma_store.py  fake_store.py
tests/: conftest.py  e2e_streamlit_llm.py  test_answer_generator.py  test_business_rules_contracts.py  test_business_rules_extra.py  test_chunker.py  test_citations.py  test_config.py  test_core_modules.py  test_document_loaders.py  test_gemini_and_chroma.py  test_openai_and_chroma.py  test_rag_pipeline.py  test_retriever.py  test_storage_and_runtime.py  test_ui_modules.py  test_ui_viewer.py  test_vector_store.py
