[project]
name = "agent-rag"
version = "0.1.0"
description = "NotebookLM-style MVP with RAG, citations, and Streamlit UI"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "chromadb>=1.0.10",
    "llama-index>=0.12.0",
    "openai>=2.36.0",
    "pymupdf==1.25.3",
    "python-docx==1.1.2",
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pytest==8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.10",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=95"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
